--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2024"
 [[bin]]
 name = "fahrenheit_to_celsius"
 path = "src/bin/ch03-05-control-flow/fahrenheit_to_celsius.rs"
+
+[[bin]]
+name = "nth_fibonacci"
+path = "src/bin/ch03-05-control-flow/nth_fibonacci.rs"
